Some small fixes to the scons build scripts
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@39 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/bindings/SConscript
+++ b/src/bindings/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-refpaths = ['.']
+env.SharedLibrary('tapcfg', ['../lib/tapcfg.c','../lib/taplog.c'])
 
 sources = Split("""
   EthernetDevice.cs
