--- a/src/SConscript
+++ b/src/SConscript
@@ -5,12 +5,19 @@ env.Append(CPPPATH = ['include'])
 # Set up the environment for compiling the libraries
 libenv = env.Clone()
 libenv.Append(CPPPATH = ['lib'])
+
+# Prepare the libobj and shlibobj object files
 libsrc = ['lib/tapcfg.c','lib/taplog.c']
+libobj = libenv.Object(['lib/tapcfg.c','lib/taplog.c'])
+if libenv['STATIC_AND_SHARED_OBJECTS_ARE_THE_SAME']:
+	shlibobj = libobj
+else:
+	shlibobj = libenv.SharedObject(['lib/tapcfg.c','lib/taplog.c'])
 
 # Compile the static library into lib directory and shared library
 # for the bindings
-libenv.Library('lib/tapcfg', libsrc, install=False)
-libenv.SharedLibrary('bindings/tapcfg', libsrc, install=False)
+libenv.Library('lib/tapcfg', libobj, install=False)
+libenv.SharedLibrary('bindings/tapcfg', shlibobj, install=False)
 
 # Compile the .Net bindings
 asm = env.CLILibrary('bindings/Ethernet', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs'])
