Update the scons files to be correct
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@69 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -20,7 +20,7 @@ libenv.Library('lib/tapcfg', libobj, install=False)
 libenv.SharedLibrary('bindings/tapcfg', shlibobj, install=False)
 
 # Compile the .Net bindings
-asm = env.CLILibrary('bindings/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs'])
+asm = env.CLILibrary('bindings/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs'])
 prog = env.CLIProgram('bindings/TAPCfgTest', ['bindings/TAPCfgTest.cs'], CILLIBS=asm)
 
 # Set up the environment for compiling the demo tests
