Add main.c to the tapserver compilation
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@96 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -36,5 +36,5 @@ listener = appenv.Object('demos/listener.c')
 appenv.Program('demos/test_client', ['demos/test_client.c'], install=False)
 appenv.Program('demos/test_server', [listener,'demos/test_server.c'], install=False)
 appenv.Program('demos/test_forwarder', [listener,'demos/test_forwarder.c'], install=False)
-appenv.Program('daemon/tapserver', ['daemon/tapserver.c'], install=False)
+appenv.Program('daemon/tapserver', ['daemon/tapserver.c','daemon/main.c'], install=False)
 
