Update SConscript file
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@100 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -31,10 +31,6 @@ appenv = conf.Finish()
 appenv.Append(LIBPATH = ['lib'])
 appenv.Prepend(LIBS = ['tapcfg'])
 
-# Compile the demo test executables
-listener = appenv.Object('demos/listener.c')
-appenv.Program('demos/test_client', ['demos/test_client.c'], install=False)
-appenv.Program('demos/test_server', [listener,'demos/test_server.c'], install=False)
-appenv.Program('demos/test_forwarder', [listener,'demos/test_forwarder.c'], install=False)
+# Compile the daemon for testing
 appenv.Program('daemon/tapserver', ['daemon/tapserver.c','daemon/main.c'], install=False)
 
