Rename the main.c to make space for the real daemon
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@162 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -32,5 +32,5 @@ appenv.Append(LIBPATH = ['lib'])
 appenv.Prepend(LIBS = ['tapcfg'])
 
 # Compile the daemon for testing
-appenv.Program('../build/tapserver', ['daemon/tapserver.c','daemon/serversock.c','daemon/main.c'], install=False)
+appenv.Program('../build/tapserver', ['daemon/tapserver.c','daemon/serversock.c','daemon/serverdemo.c'], install=False)
 
