--- a/src/SConscript
+++ b/src/SConscript
@@ -33,5 +33,5 @@ appenv.Prepend(LIBS = ['tapcfg'])
 # Compile the daemon for testing
 tapserverobj = libenv.Object(['daemon/tapserver.c','daemon/serversock.c'])
 appenv.Program('../build/tapdemo', [tapserverobj,'daemon/tapdemo.c'], install=False)
-appenv.Program('../build/tapcfgd', [tapserverobj,'daemon/daemon.c','daemon/main.c'], install=False)
+appenv.Program('../build/tapcfgd', [tapserverobj,'daemon/client.c','daemon/daemon.c','daemon/main.c'], install=False)
 
