Rename the library tapcfg into tapcfg32 in .Net bindings
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@295 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -22,9 +22,12 @@ libenv.SharedLibrary('../build/tapcfg', shlibobj, install=False)
 if GetOption('universal'):
 	libenv["ENV"]["MACOSX_DEPLOYMENT_TARGET"] = "10.4"
 	libenv.Append(CFLAGS = ['-arch', 'ppc', '-arch', 'i386', '-arch', 'ppc64', '-arch', 'x86_64'])
+	libenv32 = libenv.Clone()
 	libenv64 = libenv.Clone()
-
 	libenv.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup', '-arch', 'ppc', '-arch', 'i386', '-arch', 'ppc64', '-arch', 'x86_64'])
+
+	libenv32.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup', '-arch', 'ppc', '-arch', 'i386'])
+	libenv32.SharedLibrary('../build/tapcfg32', shlibobj, install=False)
 
 	libenv64.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup', '-arch', 'ppc64', '-arch', 'x86_64'])
 	libenv64.SharedLibrary('../build/tapcfg64', shlibobj, install=False)
