Remove ppc64 architecture from Mac builds, didn't work on my Mac
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@327 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -22,7 +22,7 @@ libenv.SharedLibrary('tapcfg', shlibobj, install=False)
 # If we want to create universal binaries of the dynamic library on Mac, do it here
 if GetOption('universal'):
 	libenv["ENV"]["MACOSX_DEPLOYMENT_TARGET"] = "10.4"
-	libenv.Append(CFLAGS = ['-arch', 'ppc', '-arch', 'i386', '-arch', 'ppc64', '-arch', 'x86_64'])
+	libenv.Append(CFLAGS = ['-arch', 'ppc', '-arch', 'i386', '-arch', 'x86_64'])
 	libenv32 = libenv.Clone()
 	libenv64 = libenv.Clone()
 
@@ -32,12 +32,12 @@ if GetOption('universal'):
 	libenv32.SharedLibrary('tapcfg32', shlibobj, install=False)
 
 	libenv64.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup'])
-	libenv64.Append(LINKFLAGS = ['-arch', 'ppc64', '-arch', 'x86_64'])
+	libenv64.Append(LINKFLAGS = ['-arch', 'x86_64'])
 	libenv64.Append(LINKFLAGS = ['-install_name', 'libtapcfg64.dylib'])
 	libenv64.SharedLibrary('tapcfg64', shlibobj, install=False)
 
 	libenv.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup'])
-	libenv.Append(LINKFLAGS = ['-arch', 'ppc', '-arch', 'i386', '-arch', 'ppc64', '-arch', 'x86_64'])
+	libenv.Append(LINKFLAGS = ['-arch', 'ppc', '-arch', 'i386', '-arch', 'x86_64'])
 	libenv.Append(LINKFLAGS = ['-install_name', 'libtapcfg.dylib'])
 
 # Compile the .Net bindings
