Enable demo programs everywhere except mingw64
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@354 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -57,8 +57,9 @@ appenv = conf.Finish()
 appenv.Append(LIBPATH = ['.'])
 appenv.Prepend(LIBS = ['tapcfg'])
 
-# Compile the daemon for testing
-#tapserverobj = libenv.Object(['daemon/tapserver.c','daemon/serversock.c'])
-#appenv.Program('tapdemo', [tapserverobj,'daemon/tapdemo.c'], install=False)
-#appenv.Program('tapcfgd', [tapserverobj,'daemon/client.c','daemon/daemon.c','daemon/main.c'], install=False)
+# Compile the daemon for testing, broken on MinGW64 because of missing getopt.h
+if not GetOption('mingw64'):
+	tapserverobj = libenv.Object(['daemon/tapserver.c','daemon/serversock.c'])
+	appenv.Program('tapdemo', [tapserverobj,'daemon/tapdemo.c'], install=False)
+	appenv.Program('tapcfgd', [tapserverobj,'daemon/client.c','daemon/daemon.c','daemon/main.c'], install=False)
 
