Add AssemblyInfo to include information about the library
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@357 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/src/SConscript
+++ b/src/SConscript
@@ -46,7 +46,7 @@ if GetOption('universal'):
 
 # Compile the .Net bindings
 if env.Detect('gmcs'):
-	asm = env.CLILibrary('TAPNet', ['bindings/NativeLib.cs','bindings/VirtualDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs'])
+	asm = env.CLILibrary('TAPNet', ['bindings/AssemblyInfo.cs','bindings/NativeLib.cs','bindings/VirtualDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs'])
 	prog = env.CLIProgram('TAPNetTest', ['demos/TAPNetTest.cs'], CILLIBS=[asm, 'System'])
 
 # Set up the environment for compiling the demo tests
